--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,12 @@ services:
       sh -c "
         python manage.py makemigrations --no-input &&
         python manage.py migrate --no-input &&
+        python manage.py collectstatic --no-input &&
         gunicorn backend.config.wsgi:application --bind 0.0.0.0:8000
       "
+    volumes:
+      - static:/app/backend/staticfiles #dev_4
+      - media:/app/backend/media
     expose:
       - "8000"
 
@@ -21,6 +25,13 @@ services:
     ports:
       - "8080:80"
     volumes:
+     - static:/home/app/web/static #dev_4
+     - media:/home/app/web/media #_dev_4
      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
+
+#dev_4
+volumes:
+    static:
+    media:
