--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,14 +5,20 @@ upstream backend_server {
 }
 
 server {
-    listen 80;  # 포트 8080 (HTTP 기본 포트)에서 요청을 수신
+    listen 80;  # 포트 80 (HTTP 기본 포트)에서 요청을 수신
 
-
+     # 4. 루트 경로(`/`)로 들어오는 모든 요청을 백엔드 서버로 전달합니다.
     location / {
+        # 5. 프록시 요청을 upstream 그룹으로 전달합니다.
         proxy_pass http://backend_server;
+        
+        # 6. 클라이언트가 요청한 Host 헤더를 그대로 백엔드에 전달합니다.
         proxy_set_header Host $host;
+        #  # 7. 실제 클라이언트의 IP 주소를 백엔드로 전달합니다.
         proxy_set_header X-Real-IP $remote_addr;
+        # 8. 프록시 서버를 거쳐온 모든 IP 주소 목록을 전달합니다.
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # 9. 클라이언트가 사용한 프로토콜(http 또는 https)을 전달합니다.
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
@@ -21,6 +27,9 @@ server {
     location /static/ {
       alias /home/app/web/static/; 
     }
+
+    # 12. 클라이언트가 "/media/"로 시작하는 URL을 요청할 때
+    # (예: 업로드된 이미지나 파일), Nginx가 직접 이 경로에서 파일을 제공합니다.
 
     location /media/ {
       alias /home/app/web/media/;
