--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,9 @@ services:
       dockerfile: backend/Dockerfile
     environment:
       - DJANGO_SETTINGS_MODULE=backend.config.settings.prod
-    command: >
-      sh -c "
+    command: > # dev_6 wait-for-it.sh 추가 및 bash로 수정
+      bash -c "
+        /app/wait-for-it.sh db:3306 --timeout=30 --strict -- \ 
         python manage.py makemigrations --no-input &&
         python manage.py migrate --no-input &&
         python manage.py collectstatic --no-input &&
@@ -19,6 +20,26 @@ services:
       - media:/app/backend/media
     expose:
       - "8000"
+    depends_on:
+      - db
+
+  #dev_6
+  db: 
+    container_name: db
+    image: mysql:8.0
+    ports:
+      - "3306:3306"
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+    environment:    
+      MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_DATABASE: distribute
+      MYSQL_USER: distribute
+      MYSQL_PASSWORD: distribute
+    volumes:
+      - db-data:/var/lib/mysql
+
 
   nginx:
     image: nginx:stable-alpine
@@ -35,3 +56,4 @@ services:
 volumes:
     static:
     media:
+    db-data:
