--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
         python manage.py makemigrations --no-input &&
         python manage.py migrate --no-input &&
         python manage.py collectstatic --no-input &&
+        python manage.py superuser && 
         gunicorn backend.config.wsgi:application --bind 0.0.0.0:8000
       "
     volumes:
