--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",    
+    "react-js-pagination": "^3.0.3",
+    "react-router-dom": "^6.26.0",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
