--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,40 +1,8 @@
 # backend_server 라는 upstream 서버 지정 (nginx 입장에서는 django가 upstream 서버)
 # web 컨테이너의 8000포트에 연결 (backend 아까 만든 컨테이너1에 해당)
-# upstream backend_server { 
-#   server backend:8000; 
-# }
-
-# server {
-#     listen 80;  # 포트 80 (HTTP 기본 포트)에서 요청을 수신
-
-#      # 4. 루트 경로(`/`)로 들어오는 모든 요청을 백엔드 서버로 전달합니다.
-#     location / {
-#         # 5. 프록시 요청을 upstream 그룹으로 전달합니다.
-#         proxy_pass http://backend_server;
-        
-#         # 6. 클라이언트가 요청한 Host 헤더를 그대로 백엔드에 전달합니다.
-#         proxy_set_header Host $host;
-#         #  # 7. 실제 클라이언트의 IP 주소를 백엔드로 전달합니다.
-#         proxy_set_header X-Real-IP $remote_addr;
-#         # 8. 프록시 서버를 거쳐온 모든 IP 주소 목록을 전달합니다.
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         # 9. 클라이언트가 사용한 프로토콜(http 또는 https)을 전달합니다.
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-
-#     # "/static/" 도메인에 도달하면 아래 alias를 수행
-#     # 아래 디렉토리(서버 파일시스템)을 맵핑
-#     location /static/ {
-#       alias /home/app/web/static/; 
-#     }
-
-#     # 12. 클라이언트가 "/media/"로 시작하는 URL을 요청할 때
-#     # (예: 업로드된 이미지나 파일), Nginx가 직접 이 경로에서 파일을 제공합니다.
-
-#     location /media/ {
-#       alias /home/app/web/media/;
-#     }
-# }
+upstream backend_server { 
+  server backend:8000; 
+}
 
 server {
     listen 80;  # 포트 80 (HTTP 기본 포트)에서 요청을 수신
@@ -44,5 +12,33 @@ server {
         index index.html index.htm;  # 기본 인덱스 파일 설정
         try_files $uri /index.html;  # 요청한 파일($uri)이 없으면 index.html로 처리
                                      # React (SPA)의 라우팅을 위해 필요함 (프론트엔드 라우터가 URL을 제어)
+    }
+
+    # Django admin 패널 프록시
+    location /admin/ {
+        proxy_pass http://backend_server/admin/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # /api/ 경로는 Django 백엔드로 프록시 (경로 변경 없이 그대로 전달)
+    location /api/ {
+        #rewrite ^/api(/.*)$ $1 break;  # /api/ 접두사를 제거하고 백엔드로 전달
+        proxy_pass http://backend_server/api/;  # /api/로 시작하는 요청을 Django 백엔드(서비스 이름: backend, 포트: 8000)로 전달
+        proxy_set_header Host $host;       # 원래 요청의 Host 헤더를 백엔드로 전달 (도메인 정보 유지) 
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # "/static/" 도메인에 도달하면 아래 alias를 수행
+    # 아래 디렉토리(서버 파일시스템)을 맵핑
+    location /static/ {
+      alias /home/app/web/static/; 
+    }
+
+    location /media/ {
+      alias /home/app/web/media/;
     }
 }
